--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
-        <a-assets>
-            <a-asset-item id="animated-asset" src="https://raw.githubusercontent.com/nicolocarpignoli/nicolocarpignoli.github.io/master/ar-playground/models/CesiumMan.gltf"></a-asset-item>
-        </a-assets>
-
         <a-marker type='barcode' value='7'>
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
             <a-entity
-                gltf-model="#animated-asset"
-                scale="2">
+                obj-model=”obj: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.obj); 
+                mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.mtl)”>
+                scale="0.01">
             </a-entity>
         </a-marker>
 
