--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 
-        <a-marker id="animated-marker" type='barcode' value='6'>
+        <a-marker type='barcode' value='6'>
             <a-entity
                 obj-model=”obj: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.obj); 
                 mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.mtl)”>
