--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <a-marker type='barcode' value='6'>
             <a-entity
                 obj-model=”obj: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.obj); 
-                mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.mtl)”
-                scale="0.01">
+                mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206 DOWNCOMER.mtl)”>
             </a-entity>
         </a-marker>
 
