--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
         <a-marker type='barcode' value='6'>
             <a-entity
-                obj-model=”obj: url(https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/401-0206%20DOWNCOMER.obj); 
-                mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/401-0206%20DOWNCOMER.mtl)”>
+                obj-model=”obj: url(https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj); 
+                mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/434440_EXPANSION_JOINT.mtl)”
+                scale="0.1">
             </a-entity>
         </a-marker>
 
