--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <body style='margin : 0px; overflow: hidden;'>
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
+            
+        <a-assets>
+            <a-asset-item id="Model_obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj"></a-asset-item>
+            <a-asset-item id="Model_mtl" src="https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/434440_EXPANSION_JOINT.mtl"></a-asset-item>
+        </a-assets>
 
         <a-marker type='barcode' value='7'>
             <a-box position='0 0.5 0' color="yellow"></a-box>
@@ -17,9 +22,8 @@
 
         <a-marker type='barcode' value='6'>
             <a-entity
-                obj-model=”obj: url(https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj); 
-                mtl: url(https://raw.githubusercontent.com/sotoag/soto22160.github.io/main/434440_EXPANSION_JOINT.mtl)”
-                scale="0.1">
+                obj-model="obj: #Model_obj; mtl: #Model_mtl"
+                scale="0.01">
             </a-entity>
         </a-marker>
 
