--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     </head>
-    <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="https://rawgit.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
     <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
     
@@ -23,7 +23,7 @@
         <a-marker type='barcode' value='6'>
             <a-entity
                 obj-model="obj: #Model_obj; mtl: #Model_mtl"
-                scale="0.01">
+                scale="0.01 0.01 0.01"
             </a-entity>
         </a-marker>
 
