--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a-marker type='barcode' value='6'>
             <a-entity
                 glft-model="#Model_obj"
-                scale="0.01 0.01 0.01"
+                scale="0.01"
             </a-entity>
         </a-marker>
 
