--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
             
         <a-assets>
-            <a-asset-item id="model_obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.gltf"></a-asset-item>
+            <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT_HALF_A.obj"></a-asset-item>
+            <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT_HALF_A.mtl"></a-asset-item>
         </a-assets>
 
         <a-marker type='barcode' value='7'>
@@ -21,7 +22,7 @@
 
         <a-marker type='barcode' value='6'>
             <a-entity
-                gltf-model="#model_obj"
+                obj-model="obj: #model-obj; mtl: #model-mtl"
                 scale="0.01">
             </a-entity>
         </a-marker>
