--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         </a-assets>
 
         <a-marker type='barcode' value='7'>
-            <a-box position='0 0.5 0' color="blue"></a-box>
+            <a-box position='0 0.5 0' color="green"></a-box>
         </a-marker>
 
         <a-marker type='barcode' value='6'>
             <a-entity
                 obj-model="obj: #model-obj; mtl: #model-mtl" 
-                scale="0.005 0.005 0.005">
+                scale="0.001 0.001 0.001">
             </a-entity>
         </a-marker>
 
