--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a-entity
         obj-model="obj: #model-obj; mtl: #model-mtl"
         gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697"
-        position ="0 0 0"
+        position ="0 0 0">
     </a-entity>
     <a-camera gps-new-camera='gpsMinDistance: 1'></a-camera>
 </a-scene>
