--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <title>AR.js A-Frame Location-based</title>
 <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
-<script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
+<script type='text/javascript' src="https://raw.githack.com/jeromeetienne/AR.js/master/aframe/build/aframe-ar.min.js"></script>
+<script type='text/javascript' src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 <body>
 
@@ -15,8 +15,7 @@
     </a-assets>
     <a-entity
         obj-model="obj: #model-obj; mtl: #model-mtl"
-        gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697"
-        position ="0 2 0">
+        gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697">
     </a-entity>
     <a-camera gps-new-camera='gpsMinDistance: 5'></a-camera>
 </a-scene>
