--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a-camera gps-new-camera='gpsMinDistance: 1'></a-camera>
     <a-entity
         obj-model="obj: #model-obj; mtl: #model-mtl"
-        position 
+        position="0 1.5 0"
         gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697">
     </a-entity>
     
