--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
 <a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-assets>
-            <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj"></a-asset-item>
-            <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.mtl"></a-asset-item>
+            <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/401-0206%20DOWNCOMER.obj"></a-asset-item>
+            <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/401-0206%20DOWNCOMER.mtl"></a-asset-item>
     </a-assets>
     <a-camera gps-new-camera='gpsMinDistance: 1'></a-camera>
     <a-entity
