--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 <a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-assets>
-            <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/401-0206%20DOWNCOMER.obj"></a-asset-item>
-            <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/401-0206%20DOWNCOMER.mtl"></a-asset-item>
+            <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj"></a-asset-item>
+            <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.mtl"></a-asset-item>
     </a-assets>
     <a-camera gps-new-camera='gpsMinDistance: 1'></a-camera>
     <a-entity
         obj-model="obj: #model-obj; mtl: #model-mtl"
         scale="0.5 0.5 0.5"
-        position="0 -20 0"
+        position="0 1 0"
         gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697">
     </a-entity>
     
