--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
 
     <!-- Pure three.js code that the A-Frame components use for location-based AR -->
-    <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js'></script>
+    <!-- script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/three.js/build/ar-threex-location-only.js' -->
 
     <!-- AR.js A-Frame components -->
     <script type='text/javascript' src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>
@@ -15,19 +15,25 @@
 </head>
 <body>
 
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-assets>
             <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj"></a-asset-item>
             <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.mtl"></a-asset-item>
     </a-assets>
-    <a-camera gps-new-camera='gpsMinDistance: 1'></a-camera>
+    
     <a-entity
         obj-model="obj: #model-obj; mtl: #model-mtl"
-        scale="0.5 0.5 0.5"
-        position="0 1 0"
-        gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697">
+        scale="0.01 0.01 0.01"
+        gps-new-entity-place="latitude: <-34.45519851102956>; longitude: <150.84487404583697>">
     </a-entity>
+    <a-text
+        value="This content will always face you."
+        look-at="[gps-new-camera]"
+        scale="120 120 120"
+        gps-entity-place="latitude: -34.455198511029; longitude: 150.844874045836;"
+     ></a-text>
     
+    <a-camera gps-new-camera='gpsMinDistance: 1'> rotation-reader</a-camera>
 </a-scene>
 </body>
 </html>
