--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-assets>
             <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj"></a-asset-item>
             <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.mtl"></a-asset-item>
@@ -33,7 +33,7 @@
         gps-entity-place="latitude: <-34.455198511029>; longitude: <150.844874045836>;"
      ></a-text>
     
-    <a-camera gps-new-camera='gpsMinDistance: 1'> rotation-reader</a-camera>
+    <a-camera gps-new-camera></a-camera>
 </a-scene>
 </body>
 </html>
