--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<a-scene vr-mode-ui='enabled: false' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
+<a-scene vr-mode-ui='enabled: true' arjs='sourceType: webcam; videoTexture: true; debugUIEnabled: false' renderer='antialias: true; alpha: true'>
     <a-assets>
             <a-asset-item id="model-obj" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.obj"></a-asset-item>
             <a-asset-item id="model-mtl" src="https://raw.githubusercontent.com/SotoAG/SOTO22160.github.io/main/434440_EXPANSION_JOINT.mtl"></a-asset-item>
@@ -24,7 +24,7 @@
     <a-entity
         obj-model="obj: #model-obj; mtl: #model-mtl"
         scale="0.0001 0.0001 0.0001"
-        gps-new-entity-place="latitude: <-34.45519851102956>; longitude: <150.84487404583697>">
+        gps-new-entity-place="latitude: -34.45519851102956; longitude: 150.84487404583697;">
     </a-entity>
     <a-text
         value="This content will always face you."
